// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-epsilon's sendEvent destination action: all fields 1`] = `
Object {
  "id": "q05uljg*(jGG",
  "jsonrpc": "2.0",
  "method": "syncEvent",
  "params": Object {
    "appId": "q05uljg*(jGG",
    "dtm_event": "subcategory",
    "eventData": Object {
      "dtm_cid": "q05uljg*(jGG",
      "dtm_cmagic": "80f256",
      "dtm_email_hash": "2c3c44d1707148b8f84fd598e4eedd8c07c9fda884627048282510b958f48d68",
      "dtm_fid": "q05uljg*(jGG",
      "dtm_mobile_hash": "2c3c44d1707148b8f84fd598e4eedd8c07c9fda884627048282510b958f48d68",
      "dtm_promo_id": "q05uljg*(jGG",
      "dtm_user_agent": "q05uljg*(jGG",
      "dtm_user_id": "q05uljg*(jGG",
      "dtm_user_ip": "q05uljg*(jGG",
      "dtmc_tms": 9,
      "idfa": "q05uljg*(jGG",
      "idfv": "q05uljg*(jGG",
    },
    "version": "q05uljg*(jGG",
  },
}
`;

exports[`Testing snapshot for actions-epsilon's sendEvent destination action: required fields 1`] = `
Object {
  "id": "q05uljg*(jGG",
  "jsonrpc": "2.0",
  "method": "syncEvent",
  "params": Object {
    "appId": "q05uljg*(jGG",
    "dtm_event": "subcategory",
    "eventData": Object {
      "dtm_cid": "q05uljg*(jGG",
      "dtm_cmagic": "80f256",
      "dtm_fid": "q05uljg*(jGG",
      "dtm_promo_id": "q05uljg*(jGG",
      "dtmc_tms": 9,
    },
    "version": "q05uljg*(jGG",
  },
}
`;
